Fri Feb 16 17:39:16 2001  Mayur Deshpande  <mayur@ics.uci.edu>

        * ace/config-qnx-rtp.h: Commented out ACE_HAS_NONSTATIC_OBJECT_MANAGER. 
          Thanks to Andrew Olson <andrew.olson@lmco.com> for the suggestion.

        * include/makeinclude/platform_qnx_rtp_gcc.GNU: Added -fexceptions to 
          CCFLAGS and 'exceptions=1' at end of file. 
          Thanks to Andrew Olson <andrew.olson@lmco.com> for the suggestion.

Fri Feb 16 05:37:47 2001  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

	* ace/Logging_Strategy.h: Updated the documentation to explain what
	  the various options mean.

	* tests/Log_Msg_Test.cpp (test_log_msg_features): Added
	  ACE_Log_Msg::PROCESS to a coupld or priority_mask() calls to
 	  make the test work correctly.  Thanks to Kitty for reporting
 	  this.

Thu Feb 15 17:53:31 2001  Frank Hunleth  <fhunleth@cs.wustl.edu>

	* ace/Thread_Manager.i: Simplified casting in
	  ACE_Thread_Descriptor::get_next per suggestion from Carlos.

Thu Feb 15 14:57:59 2001  Frank Hunleth  <fhunleth@cs.wustl.edu>

	* ace/Thread_Manager.i: Fixed typo in ACE_Thread_Descriptor::get_next.

Thu Feb 15 11:33:55 2001  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

	* tests/Refcounted_Auto_Ptr_Test.cpp (main): Always call ACE_OS::exit(0)
	  to make sure that this test terminates...

	* ace/Thread_Manager.i (get_next): Added an ACE_const_cast() to
	  make certain compilers happy.

	* ace/Logging_Strategy.cpp: Fixed some Unicode problems on Win32.

Thu Feb 15 08:49:44 2001  Carlos O'Ryan  <coryan@uci.edu>

        * bin/nightlybuilds/builds.lst:
          Rename WashU builds so all the Debian builds appear together.

Thu Feb 15 07:15:39 2001  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

        * ace/Logging_Strategy.{h,cpp}: Added support to generate multiple
          log files, rather than just two.  Thanks to Orlando Ribeiro
          <oribeiro@inescporto.pt> for this fix.

Thu Feb 15 03:36:46 2001  Krishnakumar B  <kitty@cs.wustl.edu>
